# soundbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  sound.h  soundbox.pro  window.cpp
.github/workflows/: linux.yml  macos.yml  win.yml
resources/: soundbox.icns  soundbox.rc
src/: main.cpp  sdl.h  window.cpp  window.h
src/slider/: slider.cpp  slider.h
submodules/scripts/: build_ffmpeg_win.sh
